<resources>
<<<<<<< HEAD
    <string name="app_name">My ApplicationQuizz</string>
    <string name="quiz">QUIZ</string>
    <string name="name">Name</string>
    <string name="categories">Categories</string>
    <string name="begin">BEGIN!</string>
    <string name="animals">ANIMALS</string>
    <string name="cars">CARS</string>
    <string name="food">FOOD</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="places">PLACES</string>
    <string name="hms_scrap">HMS Scrap</string>
=======
    <string name="app_name">final</string>
>>>>>>> 7b721de7d50fc18a34bd457fcb3d44b99ada3bf0
</resources>
